fix(overview): overflow sur les cards avec transition

--- a/assets/styles/common.scss
+++ b/assets/styles/common.scss
@@ -17,7 +17,6 @@
 body {
   background: #f5f5f5;
   font-family: 'Poppins', sans-serif;
-  overflow-x: hidden;
 }
 
 section.container:not(:last-of-type) {
@@ -26,4 +25,8 @@ section.container:not(:last-of-type) {
   @media only screen and (max-width: 600px) {
     margin-bottom: 10vh;
   }
+}
+
+.overflow-x-hidden {
+  overflow-x: hidden;
 }
